add cards for projects

--- a/index.html
+++ b/index.html
@@ -53,6 +53,49 @@
       </div>
     </section>
 
+    <section id='third-section'>
+      <div class='container-fluid'>
+        <div class='row'>
+          <div class='col-sm-12 projects-title mt-3'>
+            <h1>Projects</h1>
+          </div>
+        </div>
+        <div class='row'>
+          <div class='col-12 col-md-4'>
+            <div class="card" style="width: 20rem;">
+              <img class="card-img-top img-responsive" src="img/scalar-ji.png" alt="Card image cap">
+              <div class="card-block">
+                <h4 class="card-title">Scalar JI</h4>
+                <p class="card-text">Ruby on Rails app that uses the Web Audio API to let you design custom musical scales.</p>
+                <a href="https://glacial-stream-74704.herokuapp.com" class="btn btn-primary" target="_blank">Try it out!</a>
+              </div>
+            </div>
+          </div>
+          <div class='col-12 col-md-4'>
+            <div class="card" style="width: 20rem;">
+              <img class="card-img-top" src="..." alt="Card image cap">
+              <div class="card-block">
+                <h4 class="card-title">Project 2</h4>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+          <div class='col-12 col-md-4'>
+            <div class="card" style="width: 20rem;">
+              <img class="card-img-top" src="..." alt="Card image cap">
+              <div class="card-block">
+                <h4 class="card-title">Project 3</h4>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
