add testimonial; add more images and styles

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     </section>
 
     <section id='second-section'>
-      <div class='container'>
+      <div class='container pb-3'>
         <div class='row'>
-          <div class='col-sm-6 pt-3'>
+          <div class='col-sm-6 pt-3 pb-2'>
             <h2>Skills:</h2>
           </div>
-          <div class='col-sm-6 pt-3'>
+          <div class='col-sm-6 pt-3 pb-2'>
             <h2>About:</h2>
           </div>
         </div>
@@ -62,27 +62,31 @@
         </div>
         <div class='row'>
           <div class='col-12 col-md-4'>
-            <div class="card" style="width: 20rem;">
+            <div class="card" style="width: 25rem;">
               <img class="card-img-top img-responsive" src="img/scalar-ji.png" alt="Card image cap">
               <div class="card-block">
                 <h4 class="card-title">Scalar JI</h4>
-                <p class="card-text">Ruby on Rails app that uses the Web Audio API to let you design custom musical scales.</p>
+                <p class="card-text">Ruby on Rails app that uses the Web Audio API to let you quickly create custom musical scales.</p>
                 <a href="https://glacial-stream-74704.herokuapp.com" class="btn btn-primary" target="_blank">Try it out!</a>
+                <br><br>
+                <p><a href='https://github.com/hellospiral/scale_designer' target="_blank">View the code</a></p>
               </div>
             </div>
           </div>
           <div class='col-12 col-md-4'>
-            <div class="card" style="width: 20rem;">
-              <img class="card-img-top" src="..." alt="Card image cap">
+            <div class="card" style="width: 25rem;">
+              <img class="card-img-top img-responsive" src="img/shoe-shop.png" alt="Card image cap">
               <div class="card-block">
-                <h4 class="card-title">Project 2</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h4 class="card-title">Shoe Shop</h4>
+                <p class="card-text">E-commerce application written in the Ember.js framework. Users can browse products, leave reviews, and add them to their shopping cart. Admins can add, remove, and edit available products.</p>
+                <a href="https://shrouded-shelf-91453.herokuapp.com/store" class="btn btn-primary" target="_blank">Try it out!</a>
+                <br><br>
+                <p><a href='https://github.com/hellospiral/online-store' target="_blank">View the code</a></p>
               </div>
             </div>
           </div>
           <div class='col-12 col-md-4'>
-            <div class="card" style="width: 20rem;">
+            <div class="card" style="width: 25rem;">
               <img class="card-img-top" src="..." alt="Card image cap">
               <div class="card-block">
                 <h4 class="card-title">Project 3</h4>
@@ -93,8 +97,31 @@
           </div>
         </div>
       </div>
-
     </section>
+
+    <br>
+    <hr>
+    <br>
+
+
+    <div class='container'>
+      <div class='row'>
+        <div class='col-12'>
+          <blockquote class="blockquote">
+            <p class="mb-0">"Matt was a great employee. He is passionate about learning and improving his back-end development skills.
+
+            At Sitecast, we’ve mentored him to go through multiple product development cycles using SCRUM methodology. We’ve enabled him to focus on the back end development which includes the latest frameworks used in the tech industry. He also excels in writing qualifications.
+
+            He’s been a great addition to the team. Thank you, Matt."</p>
+            <footer class="p-1 blockquote-footer">
+              <img src='img/rubie.jpg' class="face rounded-circle">
+              <a href='https://www.linkedin.com/in/rubirosatiburcio/'>Rubirosa Tiburcio</a>
+              <cite title="Source Title">COO at <a href="https://sitecast.com">Sitecast</a></cite>
+            </footer>
+          </blockquote>
+        </div>
+      </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
