add more testimonials

--- a/index.html
+++ b/index.html
@@ -37,13 +37,20 @@
           <div class='col-sm-6'>
             <button type="button" class="btn btn-outline-primary mr-1 mb-1">Ruby</button>
             <button type="button" class="btn btn-outline-primary mr-1 mb-1">Rails</button>
-            <button type="button" class="btn btn-outline-primary mr-1 mb-1">Javascript</button>
             <button type="button" class="btn btn-outline-primary mr-1 mb-1">Ember</button>
             <button type="button" class="btn btn-outline-primary mr-1 mb-1">Angular</button>
+            <button type="button" class="btn btn-outline-primary mr-1 mb-1">Node</button>
+            <button type="button" class="btn btn-outline-primary mr-1 mb-1">Express</button>
+            <button type="button" class="btn btn-outline-primary mr-1 mb-1">d3</button>
+            <button type="button" class="btn btn-outline-primary mr-1 mb-1">Rspec</button>
+            <button type="button" class="btn btn-outline-primary mr-1 mb-1">TDD</button>
+            <button type="button" class="btn btn-outline-primary mr-1 mb-1">Python</button>
+            <button type="button" class="btn btn-outline-primary mr-1 mb-1">Javascript</button>
             <button type="button" class="btn btn-outline-primary mr-1 mb-1">HTML</button>
             <button type="button" class="btn btn-outline-primary mr-1 mb-1">CSS</button>
             <button type="button" class="btn btn-outline-primary mr-1 mb-1">PostgreSQL</button>
             <button type="button" class="btn btn-outline-primary mr-1 mb-1">Agile</button>
+            <button type="button" class="btn btn-outline-primary mr-1 mb-1">Git</button>
             <button type="button" class="btn btn-outline-primary mr-1 mb-1">Scrum</button>
           </div>
           <div class='col-sm-6'>
@@ -105,18 +112,42 @@
 
 
     <div class='container'>
-      <div class='row'>
+      <div class='row p-1'>
         <div class='col-12'>
           <blockquote class="blockquote">
-            <p class="mb-0">"Matt was a great employee. He is passionate about learning and improving his back-end development skills.
-
-            At Sitecast, we’ve mentored him to go through multiple product development cycles using SCRUM methodology. We’ve enabled him to focus on the back end development which includes the latest frameworks used in the tech industry. He also excels in writing qualifications.
+            <p class="mb-0">"Matt was a great employee. He is passionate about learning and improving his back-end development skills. He also excels in writing qualifications.
 
             He’s been a great addition to the team. Thank you, Matt."</p>
             <footer class="p-1 blockquote-footer">
               <img src='img/rubie.jpg' class="face rounded-circle">
               <a href='https://www.linkedin.com/in/rubirosatiburcio/'>Rubirosa Tiburcio</a>
               <cite title="Source Title">COO at <a href="https://sitecast.com">Sitecast</a></cite>
+            </footer>
+          </blockquote>
+        </div>
+      </div>
+
+      <div class='row p-1'>
+        <div class='col-12'>
+          <blockquote class="blockquote">
+            <p class="mb-0">"Matt completely overhauled the database architecture for the company's app, using a new logical arrangement that he'd never seen before but learned within days. He seems to me like a seriously creative problem solver and a natural mentor, and I'd definitely work with him again."</p>
+            <footer class="p-1 blockquote-footer">
+              <img src='img/alex.jpg' class="face rounded-circle">
+              <a href='https://www.linkedin.com/in/alexander-jacks/'>Alex Jacks</a>
+              <cite>Front End Developer</cite>
+            </footer>
+          </blockquote>
+        </div>
+      </div>
+
+      <div class='row p-1'>
+        <div class='col-12'>
+          <blockquote class="blockquote">
+            <p class="mb-0">"During the time we worked together I found Matt to be very intelligent and methodical in his approach within a software development process. Matt has proved to be a great asset within a development team and he works very well in a collaborative, time sensitive environment."</p>
+            <footer class="p-1 blockquote-footer">
+              <img src='img/tony.jpg' class="face rounded-circle">
+              <a href='https://www.linkedin.com/in/tonythach/'>Tony Thach</a>
+              <cite>Site Operations Mangaer at <a href="http://www.forixcommerce.com/">Forix</a></cite>
             </footer>
           </blockquote>
         </div>
