--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Matt Carlson</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400|Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,400,500,600,700" rel="stylesheet">
     <link href="styles/styles.css" type="text/css" rel="stylesheet">
   </head>
 
@@ -15,9 +18,9 @@
       <div class='container-fluid landing-page'>
         <div class='row intro'>
           <div class='col-12'>
-            <h6>Hello, I'm</h6>
+            <h3>Hello, I'm</h3>
             <h2>Matt Carlson</h2>
-            <h4>Web Developer</h4>
+            <h3>Web Developer</h3>
           </div>
         </div>
       </div>
@@ -35,23 +38,23 @@
         </div>
         <div class='row'>
           <div class='col-sm-6'>
-            <button type="button" class="btn btn-outline-primary mr-1 mb-1">Ruby</button>
-            <button type="button" class="btn btn-outline-primary mr-1 mb-1">Rails</button>
-            <button type="button" class="btn btn-outline-primary mr-1 mb-1">Ember</button>
-            <button type="button" class="btn btn-outline-primary mr-1 mb-1">Angular</button>
-            <button type="button" class="btn btn-outline-primary mr-1 mb-1">Node</button>
-            <button type="button" class="btn btn-outline-primary mr-1 mb-1">Express</button>
-            <button type="button" class="btn btn-outline-primary mr-1 mb-1">d3</button>
-            <button type="button" class="btn btn-outline-primary mr-1 mb-1">Rspec</button>
-            <button type="button" class="btn btn-outline-primary mr-1 mb-1">TDD</button>
-            <button type="button" class="btn btn-outline-primary mr-1 mb-1">Python</button>
-            <button type="button" class="btn btn-outline-primary mr-1 mb-1">Javascript</button>
-            <button type="button" class="btn btn-outline-primary mr-1 mb-1">HTML</button>
-            <button type="button" class="btn btn-outline-primary mr-1 mb-1">CSS</button>
-            <button type="button" class="btn btn-outline-primary mr-1 mb-1">PostgreSQL</button>
-            <button type="button" class="btn btn-outline-primary mr-1 mb-1">Agile</button>
-            <button type="button" class="btn btn-outline-primary mr-1 mb-1">Git</button>
-            <button type="button" class="btn btn-outline-primary mr-1 mb-1">Scrum</button>
+            <span class="btn-custom btn-outline btn mt-1 mb-1">Ruby</span>
+            <span class="btn-custom btn-outline btn mt-1 mb-1">Rails</span>
+            <span class="btn-custom btn-outline btn mt-1 mb-1">Ember</span>
+            <span class="btn-custom btn-outline btn mt-1 mb-1">Angular</span>
+            <span class="btn-custom btn-outline btn mt-1 mb-1">Node</span>
+            <span class="btn-custom btn-outline btn mt-1 mb-1">Express</span>
+            <span class="btn-custom btn-outline btn mt-1 mb-1">d3</span>
+            <span class="btn-custom btn-outline btn mt-1 mb-1">Rspec</span>
+            <span class="btn-custom btn-outline btn mt-1 mb-1">TDD</span>
+            <span class="btn-custom btn-outline btn mt-1 mb-1">Python</span>
+            <span class="btn-custom btn-outline btn mt-1 mb-1">Javascript</span>
+            <span class="btn-custom btn-outline btn mt-1 mb-1">HTML</span>
+            <span class="btn-custom btn-outline btn mt-1 mb-1">CSS</span>
+            <span class="btn-custom btn-outline btn mt-1 mb-1">PostgreSQL</span>
+            <span class="btn-custom btn-outline btn mt-1 mb-1">Agile</span>
+            <span class="btn-custom btn-outline btn mt-1 mb-1">Git</span>
+            <span class="btn-custom btn-outline btn mt-1 mb-1">Scrum</span>
           </div>
           <div class='col-sm-6'>
             <p>I'm a really amazing programmer and all-around dude.</p>
@@ -61,7 +64,7 @@
     </section>
 
     <section id='third-section'>
-      <div class='container-fluid'>
+      <div class='container-fluid projects'>
         <div class='row'>
           <div class='col-sm-12 projects-title mt-3'>
             <h1>Projects</h1>
@@ -74,7 +77,7 @@
               <div class="card-block">
                 <h4 class="card-title">Scalar JI</h4>
                 <p class="card-text">Ruby on Rails app that uses the Web Audio API to let you quickly create custom musical scales.</p>
-                <a href="https://glacial-stream-74704.herokuapp.com" class="btn btn-primary" target="_blank">Try it out!</a>
+                <a href="https://glacial-stream-74704.herokuapp.com" class="btn btn-custom" target="_blank">Try it out!</a>
                 <br><br>
                 <p><a href='https://github.com/hellospiral/scale_designer' target="_blank">View the code</a></p>
               </div>
@@ -86,7 +89,7 @@
               <div class="card-block">
                 <h4 class="card-title">Shoe Shop</h4>
                 <p class="card-text">E-commerce application written in the Ember.js framework. Users can browse products, leave reviews, and add them to their shopping cart. Admins can add, remove, and edit available products.</p>
-                <a href="https://shrouded-shelf-91453.herokuapp.com/store" class="btn btn-primary" target="_blank">Try it out!</a>
+                <a href="https://shrouded-shelf-91453.herokuapp.com/store" class="btn btn-custom" target="_blank">Try it out!</a>
                 <br><br>
                 <p><a href='https://github.com/hellospiral/online-store' target="_blank">View the code</a></p>
               </div>
@@ -94,11 +97,11 @@
           </div>
           <div class='col-12 col-md-4'>
             <div class="card" style="width: 25rem;">
-              <img class="card-img-top" src="..." alt="Card image cap">
+              <img class="card-img-top" src="#" alt="Card image cap">
               <div class="card-block">
                 <h4 class="card-title">Project 3</h4>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <button href="#" class="btn btn-custom">Go somewhere</button>
               </div>
             </div>
           </div>
@@ -110,11 +113,10 @@
     <hr>
     <br>
 
-
     <div class='container'>
       <div class='row p-1'>
         <div class='col-12'>
-          <blockquote class="blockquote">
+          <blockquote class="blockquote quotes">
             <p class="mb-0">"Matt was a great employee. He is passionate about learning and improving his back-end development skills. He also excels in writing qualifications.
 
             He’s been a great addition to the team. Thank you, Matt."</p>
@@ -124,12 +126,8 @@
               <cite title="Source Title">COO at <a href="https://sitecast.com">Sitecast</a></cite>
             </footer>
           </blockquote>
-        </div>
-      </div>
 
-      <div class='row p-1'>
-        <div class='col-12'>
-          <blockquote class="blockquote">
+          <blockquote class="blockquote quotes">
             <p class="mb-0">"Matt completely overhauled the database architecture for the company's app, using a new logical arrangement that he'd never seen before but learned within days. He seems to me like a seriously creative problem solver and a natural mentor, and I'd definitely work with him again."</p>
             <footer class="p-1 blockquote-footer">
               <img src='img/alex.jpg' class="face rounded-circle">
@@ -137,13 +135,9 @@
               <cite>Front End Developer</cite>
             </footer>
           </blockquote>
-        </div>
-      </div>
 
-      <div class='row p-1'>
-        <div class='col-12'>
-          <blockquote class="blockquote">
-            <p class="mb-0">"During the time we worked together I found Matt to be very intelligent and methodical in his approach within a software development process. Matt has proved to be a great asset within a development team and he works very well in a collaborative, time sensitive environment."</p>
+          <blockquote class="blockquote quotes">
+            <p class="mb-0">"During the time we worked together I found Matt to be very intelligent and methodical in his approach within a software development process. Matt has proven to be a great asset within a development team and he works very well in a collaborative, time sensitive environment."</p>
             <footer class="p-1 blockquote-footer">
               <img src='img/tony.jpg' class="face rounded-circle">
               <a href='https://www.linkedin.com/in/tonythach/'>Tony Thach</a>
@@ -154,7 +148,8 @@
       </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src="scripts/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
   </body>
