add weather-waves project

--- a/index.html
+++ b/index.html
@@ -38,23 +38,23 @@
         </div>
         <div class='row'>
           <div class='col-sm-6'>
-            <span class="btn-custom btn-outline btn mt-1 mb-1">Ruby</span>
-            <span class="btn-custom btn-outline btn mt-1 mb-1">Rails</span>
-            <span class="btn-custom btn-outline btn mt-1 mb-1">Ember</span>
-            <span class="btn-custom btn-outline btn mt-1 mb-1">Angular</span>
-            <span class="btn-custom btn-outline btn mt-1 mb-1">Node</span>
-            <span class="btn-custom btn-outline btn mt-1 mb-1">Express</span>
-            <span class="btn-custom btn-outline btn mt-1 mb-1">d3</span>
-            <span class="btn-custom btn-outline btn mt-1 mb-1">Rspec</span>
-            <span class="btn-custom btn-outline btn mt-1 mb-1">TDD</span>
-            <span class="btn-custom btn-outline btn mt-1 mb-1">Python</span>
-            <span class="btn-custom btn-outline btn mt-1 mb-1">Javascript</span>
-            <span class="btn-custom btn-outline btn mt-1 mb-1">HTML</span>
-            <span class="btn-custom btn-outline btn mt-1 mb-1">CSS</span>
-            <span class="btn-custom btn-outline btn mt-1 mb-1">PostgreSQL</span>
-            <span class="btn-custom btn-outline btn mt-1 mb-1">Agile</span>
-            <span class="btn-custom btn-outline btn mt-1 mb-1">Git</span>
-            <span class="btn-custom btn-outline btn mt-1 mb-1">Scrum</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1">Ruby</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1">Rails</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1">Ember</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1">Angular</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1">Node</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1">Express</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1">d3</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1">Rspec</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1">TDD</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1">Python</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1">Javascript</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1">HTML</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1">CSS</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1">PostgreSQL</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1">Agile</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1">Git</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1">Scrum</span>
           </div>
           <div class='col-sm-6'>
             <p>I'm a really amazing programmer and all-around dude.</p>
@@ -77,7 +77,7 @@
               <div class="card-block">
                 <h4 class="card-title">Scalar JI</h4>
                 <p class="card-text">Ruby on Rails app that uses the Web Audio API to let you quickly create custom musical scales.</p>
-                <a href="https://glacial-stream-74704.herokuapp.com" class="btn btn-custom" target="_blank">Try it out!</a>
+                <a href="https://glacial-stream-74704.herokuapp.com" class="btn btn-custom" target="_blank">Try it out</a>
                 <br><br>
                 <p><a href='https://github.com/hellospiral/scale_designer' target="_blank">View the code</a></p>
               </div>
@@ -89,7 +89,7 @@
               <div class="card-block">
                 <h4 class="card-title">Shoe Shop</h4>
                 <p class="card-text">E-commerce application written in the Ember.js framework. Users can browse products, leave reviews, and add them to their shopping cart. Admins can add, remove, and edit available products.</p>
-                <a href="https://shrouded-shelf-91453.herokuapp.com/store" class="btn btn-custom" target="_blank">Try it out!</a>
+                <a href="https://shrouded-shelf-91453.herokuapp.com/store" class="btn btn-custom" target="_blank">Try it out</a>
                 <br><br>
                 <p><a href='https://github.com/hellospiral/online-store' target="_blank">View the code</a></p>
               </div>
@@ -97,11 +97,13 @@
           </div>
           <div class='col-12 col-md-4'>
             <div class="card" style="width: 25rem;">
-              <img class="card-img-top" src="#" alt="Card image cap">
+              <img class="card-img-top" src="img/weather-waves.png" alt="Card image cap">
               <div class="card-block">
-                <h4 class="card-title">Project 3</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <button href="#" class="btn btn-custom">Go somewhere</button>
+                <h4 class="card-title">Weather Waves</h4>
+                <p class="card-text">Data visualization app in Ember using d3 and the Open Weather API.</p>
+                <a href="http://weather-waves.herokuapp.com/" class="btn btn-custom" target="_blank">Try it out</a>
+                <br><br>
+                <p><a href='https://github.com/hellospiral/weather-waves' target="_blank">View the code</a></p>
               </div>
             </div>
           </div>
@@ -119,7 +121,7 @@
           <blockquote class="blockquote quotes">
             <p class="mb-0">"Matt was a great employee. He is passionate about learning and improving his back-end development skills. He also excels in writing qualifications.
 
-            He’s been a great addition to the team. Thank you, Matt."</p>
+            He’s been a great addition to the team."</p>
             <footer class="p-1 blockquote-footer">
               <img src='img/rubie.jpg' class="face rounded-circle">
               <a href='https://www.linkedin.com/in/rubirosatiburcio/'>Rubirosa Tiburcio</a>
