add getInTouch action button

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
             <h3>Web Developer</h3>
           </div>
         </div>
+        <div class='row'>
+          <div class='col-12'>
+            <button id="getInTouch" type="button" class="btn btn-custom m-3 btn-lg">Get in touch</button>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -155,7 +160,7 @@
 
     <hr>
 
-    <div class='container'>
+    <div id="contact" class='container'>
       <div class='row'>
         <div class='col-sm-12 projects-title mt-3'>
           <h1>Contact Me</h1>
@@ -193,6 +198,7 @@
     <script src="scripts/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/jquery.scrollto/2.1.2/jquery.scrollTo.min.js"></script>
   </body>
 
 </html>
