replace labels with placeholders in contact form

--- a/index.html
+++ b/index.html
@@ -79,11 +79,12 @@
         </div>
         <div class='row'>
           <div class='col-12 col-md-4'>
-            <div class="card" style="width: 25rem;">
+            <div class="card" style="width: 24rem;">
               <img class="card-img-top img-responsive" src="img/scalar-ji.png" alt="Card image cap">
               <div class="card-block">
                 <h4 class="card-title">Scalar JI</h4>
-                <p class="card-text">Ruby on Rails app that uses the Web Audio API to let you quickly create custom musical scales.</p>
+                <p class="card-text">Ruby on Rails app that uses the Web Audio API to let you quickly create custom musical scales. </p>
+                <br><br>
                 <a href="https://glacial-stream-74704.herokuapp.com" class="btn btn-custom" target="_blank">Try it out</a>
                 <br><br>
                 <p><a href='https://github.com/hellospiral/scale_designer' target="_blank">View the code</a></p>
@@ -91,7 +92,7 @@
             </div>
           </div>
           <div class='col-12 col-md-4'>
-            <div class="card" style="width: 25rem;">
+            <div class="card" style="width: 24rem;">
               <img class="card-img-top img-responsive" src="img/shoe-shop.png" alt="Card image cap">
               <div class="card-block">
                 <h4 class="card-title">Shoe Shop</h4>
@@ -103,7 +104,7 @@
             </div>
           </div>
           <div class='col-12 col-md-4'>
-            <div class="card" style="width: 25rem;">
+            <div class="card" style="width: 24rem;">
               <img class="card-img-top" src="img/weather-waves.png" alt="Card image cap">
               <div class="card-block">
                 <h4 class="card-title">Weather Waves</h4>
@@ -118,6 +119,7 @@
       </div>
     </section>
 
+    <br>
     <br>
     <hr>
     <br>
@@ -170,18 +172,15 @@
         <div class='col-12'>
           <form id="contact" method="post" action="https://formspree.io/matthewthomascarlson@gmail.com" class='form-group'>
             <div class="field p-1">
-              <label for="name">Name:</label>
-              <input class='form-control' type="text" id="name" name="name" required>
+              <input class='form-control' type="text" id="name" name="name" placeholder="Your name" required>
             </div>
 
             <div class="field p-1">
-              <label for="email">Email:</label>
-              <input class='form-control' type="email" id="email" name="email" required>
+              <input class='form-control' type="email" id="email" name="email" placeholder="Your email address" required>
             </div>
 
             <div class="field p-1">
-              <label for="message">Message:</label>
-              <textarea class='form-control' id="message" name="message" rows="4" required></textarea>
+              <textarea class='form-control' id="message" name="message" rows="4" required placeholder="Tell me about your project... what is it? How can I help?"></textarea>
             </div>
 
             <div class="field p-1">
@@ -192,7 +191,6 @@
         </div>
       </div>
     </div>
-
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="scripts/script.js"></script>
