--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Matt Carlson</title>
+    <script src="https://use.fontawesome.com/748350066d.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400|Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
@@ -83,7 +84,7 @@
               <img class="card-img-top img-responsive" src="img/scalar-ji.png" alt="Card image cap">
               <div class="card-block">
                 <h4 class="card-title">Scalar JI</h4>
-                <p class="card-text">Ruby on Rails app that uses the Web Audio API to let you quickly create custom musical scales. </p>
+                <p class="card-text">Ruby on Rails app that uses the Web Audio API to let you quickly create custom musical scales in just intonation tuning systems. </p>
                 <br><br>
                 <a href="https://glacial-stream-74704.herokuapp.com" class="btn btn-custom" target="_blank">Try it out</a>
                 <br><br>
@@ -124,7 +125,7 @@
     <hr>
     <br>
 
-    <div class='container'>
+    <div class='container center'>
       <div class='row p-1'>
         <div class='col-12'>
           <blockquote class="blockquote quotes">
@@ -164,19 +165,26 @@
 
     <div id="contact" class='container'>
       <div class='row'>
-        <div class='col-sm-12 projects-title mt-3'>
-          <h1>Contact Me</h1>
+        <div class='col-sm-12 projects-title mt-2'>
+          <h1>Let's talk</h1>
         </div>
+      </div>
+      <div class='row'>
+        <div class='col-sm-3'></div>
+        <div class='col-sm-6'>
+          <p>After you introduce yourself and your project, I'll get in touch to schedule a time to chat. You should expect to hear from me in a day or so.</p>
+        </div>
+        <div class='col-sm-3'></div>
       </div>
       <div class='row'>
         <div class='col-12'>
           <form id="contact" method="post" action="https://formspree.io/matthewthomascarlson@gmail.com" class='form-group'>
             <div class="field p-1">
-              <input class='form-control' type="text" id="name" name="name" placeholder="Your name" required>
+              <input class='form-control' type="text" id="name" name="name" placeholder="Name" required>
             </div>
 
             <div class="field p-1">
-              <input class='form-control' type="email" id="email" name="email" placeholder="Your email address" required>
+              <input class='form-control' type="email" id="email" name="email" placeholder="Email address" required>
             </div>
 
             <div class="field p-1">
@@ -187,7 +195,21 @@
               <button class='btn btn-custom' type="submit">Send</button>
             </div>
           </form>
-
+        </div>
+      </div>
+      <br>
+      <hr>
+      <br>
+      <div class='container center'>
+        <div class='row'>
+          <div class='col col-12'>
+            <p class="lead">
+            <a href="https://github.com/hellospiral" target="blank"><i class="fa fa-fw fa-github fa-2x m-1"></i></a>
+            <a href="https://linkedin.com/in/matthewthomascarlson" target="blank"><i class="fa fa-fw fa-linkedin fa-2x m-1"></i></a>
+            <a href="https://twitter.com/hellospiral" target="blank"><i class="fa fa-fw fa-twitter fa-2x m-1"></i></a>
+            <a href="https://instagram.com/matts_amazing_life" target="blank"><i class="fa fa-fw fa-instagram fa-2x m-1"></i></a>
+            </p>
+          </div>
         </div>
       </div>
     </div>
