add rounded/animated buttons; center card content; hover transition for social icons

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class='row'>
           <div class='col-12'>
-            <button id="getInTouch" type="button" class="btn btn-custom m-3 btn-lg">Get in touch</button>
+            <button id="getInTouch" type="button" class="btn btn-custom m-3 btn-lg grower">Get in touch</button>
           </div>
         </div>
       </div>
@@ -83,12 +83,14 @@
             <div class="card" style="width: 24rem;">
               <img class="card-img-top img-responsive" src="img/scalar-ji.png" alt="Card image cap">
               <div class="card-block">
-                <h4 class="card-title">Scalar JI</h4>
-                <p class="card-text">Ruby on Rails app that uses the Web Audio API to let you quickly create custom musical scales in just intonation tuning systems. </p>
-                <br><br>
-                <a href="https://glacial-stream-74704.herokuapp.com" class="btn btn-custom" target="_blank">Try it out</a>
-                <br><br>
-                <p><a href='https://github.com/hellospiral/scale_designer' target="_blank">View the code</a></p>
+                <div class="center">
+                  <h4 class="card-title">Scalar JI</h4>
+                  <p class="card-text">Ruby on Rails app that uses the Web Audio API to let you quickly create custom musical scales in just intonation tuning systems. </p>
+                  <br><br>
+                  <a href="https://glacial-stream-74704.herokuapp.com" class="btn btn-custom grower-sm" target="_blank">Try it out</a>
+                  <br><br>
+                  <p><a href='https://github.com/hellospiral/scale_designer' target="_blank">View the code</a></p>
+                </div>
               </div>
             </div>
           </div>
@@ -96,11 +98,13 @@
             <div class="card" style="width: 24rem;">
               <img class="card-img-top img-responsive" src="img/shoe-shop.png" alt="Card image cap">
               <div class="card-block">
-                <h4 class="card-title">Shoe Shop</h4>
-                <p class="card-text">E-commerce application written in the Ember.js framework. Users can browse products, leave reviews, and add them to their shopping cart. Admins can add, remove, and edit available products.</p>
-                <a href="https://shrouded-shelf-91453.herokuapp.com/store" class="btn btn-custom" target="_blank">Try it out</a>
-                <br><br>
-                <p><a href='https://github.com/hellospiral/online-store' target="_blank">View the code</a></p>
+                <div class='center'>
+                  <h4 class="card-title">Shoe Shop</h4>
+                  <p class="card-text">E-commerce application written in the Ember.js framework. Users can browse products, leave reviews, and add them to their shopping cart. Admins can add, remove, and edit available products.</p>
+                  <a href="https://shrouded-shelf-91453.herokuapp.com/store" class="btn btn-custom grower-sm" target="_blank">Try it out</a>
+                  <br><br>
+                  <p><a href='https://github.com/hellospiral/online-store' target="_blank">View the code</a></p>
+                </div>
               </div>
             </div>
           </div>
@@ -108,11 +112,13 @@
             <div class="card" style="width: 24rem;">
               <img class="card-img-top" src="img/weather-waves.png" alt="Card image cap">
               <div class="card-block">
-                <h4 class="card-title">Weather Waves</h4>
-                <p class="card-text">Data visualization app in Ember using d3 and the Open Weather API.</p>
-                <a href="http://weather-waves.herokuapp.com/" class="btn btn-custom" target="_blank">Try it out</a>
-                <br><br>
-                <p><a href='https://github.com/hellospiral/weather-waves' target="_blank">View the code</a></p>
+                <div class='center'>
+                  <h4 class="card-title">Weather Waves</h4>
+                  <p class="card-text">Data visualization app in Ember using d3 and the Open Weather API.</p>
+                  <a href="http://weather-waves.herokuapp.com/" class="btn btn-custom grower-sm" target="_blank">Try it out</a>
+                  <br><br>
+                  <p><a href='https://github.com/hellospiral/weather-waves' target="_blank">View the code</a></p>
+                </div>
               </div>
             </div>
           </div>
@@ -191,8 +197,8 @@
               <textarea class='form-control' id="message" name="message" rows="4" required placeholder="Tell me about your project... what is it? How can I help?"></textarea>
             </div>
 
-            <div class="field p-1">
-              <button class='btn btn-custom' type="submit">Send</button>
+            <div class="center field">
+              <button class='btn btn-custom btn-lg grower' type="submit">Send</button>
             </div>
           </form>
         </div>
