--- a/index.html
+++ b/index.html
@@ -35,44 +35,51 @@
     </section>
 
     <section id='second-section'>
-      <div class='container pb-3'>
+      <div class='container pb-3 hideMeQuicker'>
         <div class='row'>
-          <div class='col-sm-6 pt-3 pb-2'>
-            <h2>Skills:</h2>
+          <div class='col-sm-6 pt-2 pb-2'>
+            <h2>About me:</h2>
           </div>
-          <div class='col-sm-6 pt-3 pb-2'>
-            <h2>About:</h2>
+          <div class='col-sm-6 pt-2 pb-2'>
+            <h2>Skills:</h2>
           </div>
         </div>
         <div class='row'>
+          <div class='col-sm-6'>
+            <div class='crop m-1'>
+              <img src='img/Matt halo.jpg' class='smaller'>
+            </div>
+            <p class='m-1'>Full-stack developer with a passion for back-end architecture.</p>
+            <p class='m-1'>Came to programming from a background as a musician, composer, and instructor.</p>
+            <p class='m-1'>Feeding my creativity and self-learning has been a pastime since childhood, and I'm happiest when collaborating with others to solve new and challenging problems.</p>
+            </p>
+          </div>
           <div class='col-sm-6'>
             <span class="btn-custom btn-outline btn mr-1 mb-1">Ruby</span>
             <span class="btn-custom btn-outline btn mr-1 mb-1">Rails</span>
             <span class="btn-custom btn-outline btn mr-1 mb-1">Ember</span>
             <span class="btn-custom btn-outline btn mr-1 mb-1">Angular</span>
             <span class="btn-custom btn-outline btn mr-1 mb-1">Node</span>
-            <span class="btn-custom btn-outline btn mr-1 mb-1">Express</span>
-            <span class="btn-custom btn-outline btn mr-1 mb-1">d3</span>
-            <span class="btn-custom btn-outline btn mr-1 mb-1">Rspec</span>
-            <span class="btn-custom btn-outline btn mr-1 mb-1">TDD</span>
-            <span class="btn-custom btn-outline btn mr-1 mb-1">Python</span>
             <span class="btn-custom btn-outline btn mr-1 mb-1">Javascript</span>
             <span class="btn-custom btn-outline btn mr-1 mb-1">HTML</span>
             <span class="btn-custom btn-outline btn mr-1 mb-1">CSS</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1">Git</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1">Express</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1">D3</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1">Python</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1">Rspec</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1">Capybara</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1">TDD</span>
             <span class="btn-custom btn-outline btn mr-1 mb-1">PostgreSQL</span>
             <span class="btn-custom btn-outline btn mr-1 mb-1">Agile</span>
-            <span class="btn-custom btn-outline btn mr-1 mb-1">Git</span>
             <span class="btn-custom btn-outline btn mr-1 mb-1">Scrum</span>
-          </div>
-          <div class='col-sm-6'>
-            <p>I'm a really amazing programmer and all-around dude.</p>
           </div>
         </div>
       </div>
     </section>
 
     <section id='third-section'>
-      <div class='container-fluid projects'>
+      <div class='container-fluid projects hideMeQuicker'>
         <div class='row'>
           <div class='col-sm-12 projects-title mt-3'>
             <h1>Projects</h1>
@@ -131,7 +138,7 @@
     <hr>
     <br>
 
-    <div class='container center'>
+    <div class='container center hideme'>
       <div class='row p-1'>
         <div class='col-12'>
           <blockquote class="blockquote quotes">
@@ -169,7 +176,7 @@
 
     <hr>
 
-    <div id="contact" class='container'>
+    <div id="contact" class='container hideme'>
       <div class='row'>
         <div class='col-sm-12 projects-title mt-2'>
           <h1>Let's talk</h1>
