--- a/index.html
+++ b/index.html
@@ -224,6 +224,14 @@
             </p>
           </div>
         </div>
+
+        <div class='row'>
+          <div class='col col-xs-12'>
+            <p>© 2017,
+				      <a href="/">Matt Carlson</a>. All rights reserved.<br>
+            </p>
+          </div>
+        </div>
       </div>
     </div>
 
