add scrolling effect on header image

--- a/index.html
+++ b/index.html
@@ -7,20 +7,19 @@
     <title>Matt Carlson</title>
     <script src="https://use.fontawesome.com/748350066d.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400|Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,400,500,600,700" rel="stylesheet">
     <link href="styles/styles.css" type="text/css" rel="stylesheet">
-
-
   </head>
 
   <body>
     <section id = 'header'>
       <div class='container-fluid landing-page'>
         <div class='row intro'>
-          <div class='col-12'>
+          <div class='col-12 animated fadeIn'>
             <h3>Hello, I'm</h3>
             <h2>Matt Carlson</h2>
             <h3>Web Developer</h3>
@@ -28,7 +27,7 @@
         </div>
         <div class='row'>
           <div class='col-12'>
-            <button id="getInTouch" type="button" class="btn btn-custom m-3 btn-lg grower">Get in touch</button>
+            <button id="getInTouch" type="button" class="btn btn-custom m-3 btn-lg grower animated fadeIn">Get in touch</button>
           </div>
         </div>
       </div>
@@ -50,7 +49,7 @@
               <img src='img/Matt halo.jpg' class='smaller'>
             </div>
             <p class='m-1'>Full-stack developer with a passion for back-end architecture.</p>
-            <p class='m-1'>Came to programming from a background as a musician, composer, and instructor.</p>
+            <p class='m-1'>Came to programming from a background as a musician, composer, and teacher.</p>
             <p class='m-1'>Feeding my creativity and self-learning has been a pastime since childhood, and I'm happiest when collaborating with others to solve new and challenging problems.</p>
             </p>
           </div>
@@ -79,6 +78,7 @@
     </section>
 
     <section id='third-section'>
+      <hr>
       <div class='container-fluid projects hideMeQuicker'>
         <div class='row'>
           <div class='col-sm-12 projects-title mt-3'>
@@ -131,11 +131,10 @@
           </div>
         </div>
       </div>
+      <br>
+      <br>
+      <hr>
     </section>
-
-    <br>
-    <br>
-    <hr>
     <br>
 
     <div class='container center hideme'>
@@ -173,6 +172,7 @@
         </div>
       </div>
     </div>
+
 
     <hr>
 
