--- a/index.html
+++ b/index.html
@@ -35,43 +35,38 @@
 
     <section id='second-section'>
       <div class='container pb-3 hideMeQuicker'>
+
         <div class='row'>
-          <div class='col-sm-6 pt-2 pb-2'>
-            <h2>About me:</h2>
-          </div>
-          <div class='col-sm-6 pt-2 pb-2'>
-            <h2>Skills:</h2>
-          </div>
-        </div>
-        <div class='row'>
-          <div class='col-sm-6'>
+          <div class='col-sm-12 col-md-6'>
+            <h2 class='pt-2 pb-2 center'>About me:</h2>
             <div class='crop m-1'>
-              <img src='img/Matt halo.jpg' class='smaller'>
+              <img src='img/Matt halo.jpg' class='smaller img img-responsive'>
             </div>
             <p class='m-1'>Full-stack developer with a passion for back-end architecture.</p>
             <p class='m-1'>Came to programming from a background as a musician, composer, and teacher.</p>
             <p class='m-1'>Feeding my creativity and self-learning has been a pastime since childhood, and I'm happiest when collaborating with others to solve new and challenging problems.</p>
             </p>
           </div>
-          <div class='col-sm-6'>
-            <span class="btn-custom btn-outline btn mr-1 mb-1">Ruby</span>
-            <span class="btn-custom btn-outline btn mr-1 mb-1">Rails</span>
-            <span class="btn-custom btn-outline btn mr-1 mb-1">Ember</span>
-            <span class="btn-custom btn-outline btn mr-1 mb-1">Angular</span>
-            <span class="btn-custom btn-outline btn mr-1 mb-1">Node</span>
-            <span class="btn-custom btn-outline btn mr-1 mb-1">Javascript</span>
-            <span class="btn-custom btn-outline btn mr-1 mb-1">HTML</span>
-            <span class="btn-custom btn-outline btn mr-1 mb-1">CSS</span>
-            <span class="btn-custom btn-outline btn mr-1 mb-1">Git</span>
-            <span class="btn-custom btn-outline btn mr-1 mb-1">Express</span>
-            <span class="btn-custom btn-outline btn mr-1 mb-1">D3</span>
-            <span class="btn-custom btn-outline btn mr-1 mb-1">Python</span>
-            <span class="btn-custom btn-outline btn mr-1 mb-1">Rspec</span>
-            <span class="btn-custom btn-outline btn mr-1 mb-1">Capybara</span>
-            <span class="btn-custom btn-outline btn mr-1 mb-1">TDD</span>
-            <span class="btn-custom btn-outline btn mr-1 mb-1">PostgreSQL</span>
-            <span class="btn-custom btn-outline btn mr-1 mb-1">Agile</span>
-            <span class="btn-custom btn-outline btn mr-1 mb-1">Scrum</span>
+          <div class='col-sm-12 col-md-6'>
+            <h2 class='pt-2 pb-2 center'>Skills:</h2>
+            <span class="btn-custom btn-outline btn mr-1 mb-1 skill">Ruby</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1 skill">Rails</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1 skill">Ember</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1 skill">Angular</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1 skill">Node</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1 skill">Javascript</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1 skill">HTML</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1 skill">CSS</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1 skill">Git</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1 skill">Express</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1 skill">D3</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1 skill">Python</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1 skill">Rspec</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1 skill">Capybara</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1 skill">TDD</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1 skill">PostgreSQL</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1 skill">Agile</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1 skill">Scrum</span>
           </div>
         </div>
       </div>
@@ -87,7 +82,7 @@
         </div>
         <div class='row'>
           <div class='col-12 col-md-4'>
-            <div class="card" style="width: 24rem;">
+            <div class="card" style="">
               <img class="card-img-top img-responsive" src="img/scalar-ji.png" alt="Card image cap">
               <div class="card-block">
                 <div class="center">
@@ -101,8 +96,8 @@
               </div>
             </div>
           </div>
-          <div class='col-12 col-md-4'>
-            <div class="card" style="width: 24rem;">
+          <div class='col-sm-12 col-md-4'>
+            <div class="card" style="">
               <img class="card-img-top img-responsive" src="img/shoe-shop.png" alt="Card image cap">
               <div class="card-block">
                 <div class='center'>
@@ -116,7 +111,7 @@
             </div>
           </div>
           <div class='col-12 col-md-4'>
-            <div class="card" style="width: 24rem;">
+            <div class="card" style="">
               <img class="card-img-top" src="img/weather-waves.png" alt="Card image cap">
               <div class="card-block">
                 <div class='center'>
@@ -183,11 +178,11 @@
         </div>
       </div>
       <div class='row'>
-        <div class='col-sm-3'></div>
-        <div class='col-sm-6'>
-          <p>After you introduce yourself and your project, I'll get in touch to schedule a time to chat. You should expect to hear from me in a day or so.</p>
+        <div class='col-xs-2 col-sm-1 col-md-2 col-lg-3'></div>
+        <div class='col-xs-8 col-sm-10 col-md-8 col-lg-6'>
+          <p class='hidden-xs-down'>After you introduce yourself and your project, I'll get in touch to schedule a time to chat. You should expect to hear from me in a day or so.</p>
         </div>
-        <div class='col-sm-3'></div>
+        <div class='col-xs-2 col-sm-1 col-md-2 col-lg-3'></div>
       </div>
       <div class='row'>
         <div class='col-12'>
