--- a/index.html
+++ b/index.html
@@ -40,11 +40,20 @@
           <div class='col-sm-12 col-md-6'>
             <h2 class='pt-2 pb-2 center'>About me:</h2>
             <div class='crop m-1'>
-              <img src='img/Matt halo.jpg' class='smaller img img-responsive'>
+              <img src='img/Matt halo.jpg' class='smaller'>
             </div>
-            <p class='m-1'>Full-stack developer with a passion for back-end architecture.</p>
-            <p class='m-1'>Came to programming from a background as a musician, composer, and teacher.</p>
-            <p class='m-1'>Feeding my creativity and self-learning has been a pastime since childhood, and I'm happiest when collaborating with others to solve new and challenging problems.</p>
+            <p class=''>
+              I’m a full-stack web developer who has specialized in API integrations, authorization systems, authentication, and testing.
+            </p>
+            <p>
+              My background is in music composition and interdisciplinary art practices, which brought me all around the world and has taught me a lot about collaborative creativity.
+            </p>
+
+            <p>
+              I am a graduate of the Epicodus Web Development bootcamp in Portland, OR, where I specialized in Ruby on Rails and Javascript frameworks Ember and Angular.
+            </p>
+            <p>
+              After graduation I was hired as a Back End Developer at Sitecast, a local startup building a platform to streamline and automate the process of developing web applications.
             </p>
           </div>
           <div class='col-sm-12 col-md-6'>
@@ -55,16 +64,19 @@
             <span class="btn-custom btn-outline btn mr-1 mb-1 skill">Angular</span>
             <span class="btn-custom btn-outline btn mr-1 mb-1 skill">Node</span>
             <span class="btn-custom btn-outline btn mr-1 mb-1 skill">Javascript</span>
-            <span class="btn-custom btn-outline btn mr-1 mb-1 skill">HTML</span>
-            <span class="btn-custom btn-outline btn mr-1 mb-1 skill">CSS</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1 skill">HTML5</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1 skill">CSS3</span>
             <span class="btn-custom btn-outline btn mr-1 mb-1 skill">Git</span>
             <span class="btn-custom btn-outline btn mr-1 mb-1 skill">Express</span>
-            <span class="btn-custom btn-outline btn mr-1 mb-1 skill">D3</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1 skill">SQL</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1 skill">MongoDB</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1 skill">Postgres</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1 skill">D3.js</span>
             <span class="btn-custom btn-outline btn mr-1 mb-1 skill">Python</span>
             <span class="btn-custom btn-outline btn mr-1 mb-1 skill">Rspec</span>
             <span class="btn-custom btn-outline btn mr-1 mb-1 skill">Capybara</span>
             <span class="btn-custom btn-outline btn mr-1 mb-1 skill">TDD</span>
-            <span class="btn-custom btn-outline btn mr-1 mb-1 skill">PostgreSQL</span>
+            <span class="btn-custom btn-outline btn mr-1 mb-1 skill">Docker</span>
             <span class="btn-custom btn-outline btn mr-1 mb-1 skill">Agile</span>
             <span class="btn-custom btn-outline btn mr-1 mb-1 skill">Scrum</span>
           </div>
@@ -77,7 +89,7 @@
       <div class='container-fluid projects hideMeQuicker'>
         <div class='row'>
           <div class='col-sm-12 projects-title mt-3'>
-            <h1>Projects</h1>
+            <h1>Personal Projects</h1>
           </div>
         </div>
         <div class='row'>
