add campFindr project; make dropshadow grow on hover

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Matt Carlson</title>
     <script src="https://use.fontawesome.com/748350066d.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400|Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
@@ -53,7 +53,7 @@
               I am a graduate of the Epicodus Web Development bootcamp in Portland, OR, where I specialized in Ruby on Rails and Javascript frameworks Ember and Angular.
             </p>
             <p>
-              After graduation I was hired as a Back End Developer at Sitecast, a local startup building a platform to streamline and automate the process of developing web applications.
+              After graduation I was hired as a Back End Developer at Sitecast, a suite of configurable API’s to rapidly build and deploy serverless web projects with ease.
             </p>
           </div>
           <div class='col-sm-12 col-md-6'>
@@ -93,8 +93,22 @@
           </div>
         </div>
         <div class='row'>
-          <div class='col-12 col-md-4'>
-            <div class="card" style="">
+          <div class='col-12 col-md-6 col-xl-3 mb-4'>
+            <div class="card h-100" style="">
+              <img class="card-img-top img-responsive" src="img/campFindr.png" alt="Card image cap">
+              <div class="card-block">
+                <div class="center">
+                  <h4 class="card-title">CampFindr</h4>
+                  <p class="card-text">Node.js, Express and MongoDB app for finding and reviewing campgrounds.</p>
+                  <a href="https://campfindr.herokuapp.com" class="btn btn-custom grower-sm" target="_blank">Try it out</a>
+                  <br><br>
+                  <p><a href='https://github.com/hellospiral/campgroundsApp' target="_blank">View the code</a></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class='col-12 col-md-6 col-xl-3 mb-4'>
+            <div class="card h-100" style="">
               <img class="card-img-top img-responsive" src="img/scalar-ji.png" alt="Card image cap">
               <div class="card-block">
                 <div class="center">
@@ -108,13 +122,14 @@
               </div>
             </div>
           </div>
-          <div class='col-sm-12 col-md-4'>
-            <div class="card" style="">
+          <div class='col-12 col-md-6 col-xl-3 mb-4'>
+            <div class="card h-100" style="">
               <img class="card-img-top img-responsive" src="img/shoe-shop.png" alt="Card image cap">
               <div class="card-block">
                 <div class='center'>
                   <h4 class="card-title">Shoe Shop</h4>
-                  <p class="card-text">E-commerce application written in the Ember.js framework. Users can browse products, leave reviews, and add them to their shopping cart. Admins can add, remove, and edit available products.</p>
+                  <p class="card-text">E-commerce application written in the Ember.js framework. Users can browse products, leave reviews, and add them to their shopping cart.</p>
+                  <br><br>
                   <a href="https://shrouded-shelf-91453.herokuapp.com/store" class="btn btn-custom grower-sm" target="_blank">Try it out</a>
                   <br><br>
                   <p><a href='https://github.com/hellospiral/online-store' target="_blank">View the code</a></p>
@@ -122,8 +137,8 @@
               </div>
             </div>
           </div>
-          <div class='col-12 col-md-4'>
-            <div class="card" style="">
+          <div class='col-12 col-md-6 col-xl-3 mb-4'>
+            <div class="card h-100" style="">
               <img class="card-img-top" src="img/weather-waves.png" alt="Card image cap">
               <div class="card-block">
                 <div class='center'>
