use compressed images

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class='row'>
           <div class='col-12 col-md-6 col-xl-3 mb-4'>
             <div class="card h-100" style="">
-              <img class="card-img-top img-responsive" src="img/campFindr.png" alt="Card image cap">
+              <img class="card-img-top img-responsive" src="img/campFindr.jpg" alt="Card image cap">
               <div class="card-block">
                 <div class="center">
                   <h4 class="card-title">CampFindr</h4>
@@ -124,7 +124,7 @@
           </div>
           <div class='col-12 col-md-6 col-xl-3 mb-4'>
             <div class="card h-100" style="">
-              <img class="card-img-top img-responsive" src="img/shoe-shop.png" alt="Card image cap">
+              <img class="card-img-top img-responsive" src="img/shoe-shop.jpg" alt="Card image cap">
               <div class="card-block">
                 <div class='center'>
                   <h4 class="card-title">Shoe Shop</h4>
